Prevent scrolling on mobile devices when a modal is open.
Not sure if this fix should be global or not. Holler if you need it!

--- a/src/packages/modules/gallery-g2-g3/css/_responsive-gallery-g2-g3.scss
+++ b/src/packages/modules/gallery-g2-g3/css/_responsive-gallery-g2-g3.scss
@@ -562,6 +562,7 @@ $galleryFourColMax: px-em(979px);
     height: 100%;
     max-height: 100%;
     margin: 0;
+    overflow-x: hidden;
     overflow-y: auto;
 
     &.fade.in {
