--- a/src/packages/modules/gallery-g2-g3/css/gallery-g2-g3.scss
+++ b/src/packages/modules/gallery-g2-g3/css/gallery-g2-g3.scss
@@ -924,10 +924,6 @@ $columnHeaderHeight: px-em(82);
     max-height: 100%;
   }
 
-  .modal-inner {
-    // overflow: hidden;
-  }
-
   .modal-header {
     padding: px-em(36) 0 px-em(30);
 
@@ -963,11 +959,10 @@ $columnHeaderHeight: px-em(82);
 
   .modal-body {
     padding: px-em(42) 0 px-em( 40 - 18 );
-    // @include transition( box-shadow $transitionNormal $easeNormal );
 
-    // &.content-above::after {
-    //   @include box-shadow( inset 0 6px 10px -5px $stickyShadowColor );
-    // }
+    .lt-ie9 & {
+      background: white;
+    }
   }
 
   // Put the sorting above the products to handle the negative margin top
@@ -986,7 +981,6 @@ $columnHeaderHeight: px-em(82);
     z-index: 1;
     top: px-em(-18);
     height: 400px;
-    // overflow: hidden;
   }
 
   .search-form {
@@ -1036,11 +1030,6 @@ $columnHeaderHeight: px-em(82);
     i.fonticon-10-circle-q {
       margin-right: 4px;
     }
-  }
-
-  .modal-body {
-    // overflow: auto;
-
   }
 }
 
@@ -1098,7 +1087,7 @@ $columnHeaderHeight: px-em(82);
     height: px-em(79);
   }
   .lt-ie8 & .product-content {
-    width: px-em(190);
+    width: px-em(188);
   }
 
   // yep
